--- a/src/app/features/user profile/components/profile/profile.component.css
+++ b/src/app/features/user profile/components/profile/profile.component.css
@@ -103,6 +103,26 @@ mat-form-field{
   margin-bottom: 17px;
 }
 
+.articles-container {
+  display: flex;
+  flex-wrap: wrap;
+  max-height: 600px;
+  overflow-y: auto;
+}
+
+.articles-container app-favorite-article {
+  flex: 1 1 calc(50% - 10px);
+  margin: 5px;
+  box-sizing: border-box;
+}
+
+app-favorite-article {
+  background-color: #f9f9f9;
+  border: 1px solid #ddd;
+  padding: 10px;
+}
+
+
 
 
 
