--- a/src/app/features/support groups/components/create-support-group/create-support-group.component.html
+++ b/src/app/features/support groups/components/create-support-group/create-support-group.component.html
@@ -39,7 +39,8 @@
         </div>
       </div>
       <mat-card-actions align="end">
-        <button mat-raised-button color="accent" class="submit-button" type="submit" [disabled]="createGroupForm.invalid || selectedEmails.length < 2">Creează</button>
+        <button mat-raised-button color="accent" class="submit-button" type="submit"
+                [disabled]="createGroupForm.invalid || selectedEmails.length < 2">Creează</button>
       </mat-card-actions>
     </form>
   </mat-card-content>
