--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,10 @@
 <app-layout></app-layout>
+  <df-messenger
+    intent="WELCOME"
+    chat-title="CCApp-agent"
+    agent-id="868bb97d-3f2d-4c33-888d-d0555f9486e6"
+    language-code="ro">
+  </df-messenger>
 <mat-toolbar style="margin-top: 50px">
   <span style="margin: auto">© 2024 CC Website. All rights reserved.</span>
 </mat-toolbar>
