--- a/src/app/features/auth/components/login/login.component.html
+++ b/src/app/features/auth/components/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="main-div">
   <mat-card>
       <div class="column">
-        <mat-card-title>Login <i class="fa-solid fa-arrow-right-to-bracket"></i></mat-card-title>
+        <mat-card-title>Conectare <i class="fa-solid fa-arrow-right-to-bracket"></i></mat-card-title>
         <div class="row">
           <mat-card-content>
             <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
@@ -11,10 +11,10 @@
                     <mat-label for="email">Email</mat-label>
                     <input matInput formControlName="email" />
                     <mat-error *ngIf="(!loginForm.get('email').valid || loginForm.get('email').errors?.whitespace) && !loginForm.get('email').errors?.required">
-                      Please enter a valid email!
+                      Vă rugăm introduceți o adresă de email validă!
                     </mat-error>
                     <mat-error *ngIf="loginForm.get('email').errors?.required">
-                      Email address is required!
+                      Adresa de email este obligatorie!
                     </mat-error>
                   </mat-form-field>
                 </div>
@@ -22,18 +22,18 @@
               <div class="form-group">
                 <div class="col-md-6">
                   <mat-form-field>
-                    <mat-label for="password">Password</mat-label>
+                    <mat-label for="password">Parolă</mat-label>
                     <input matInput [type]="hidePassword ? 'password' : 'text'" formControlName="password" #password >
                     <mat-icon matSuffix (click)="togglePasswordVisibility(password)" >
                       {{hidePassword?'visibility_off':'visibility'}}
                     </mat-icon>
                     <mat-error *ngIf="loginForm.get('password').errors?.required">
-                      Password is required!
+                      Parola e obligatorie!
                     </mat-error>
                   </mat-form-field>
                 </div>
               </div>
-              <button mat-raised-button color="primary" type="submit" [disabled]="loginForm.invalid" >Login</button>
+              <button mat-raised-button color="primary" type="submit" [disabled]="loginForm.invalid" >Conectare</button>
             </form>
           </mat-card-content>
         </div>
