--- a/src/app/features/auth/components/register/register.component.html
+++ b/src/app/features/auth/components/register/register.component.html
@@ -1,20 +1,20 @@
 <div class="main-div">
 <mat-card>
       <div class="column">
-        <mat-card-title>Register Your Account <i class="fa-solid fa-user-plus fa-1x"></i></mat-card-title>
+        <mat-card-title>Creează un cont <i class="fa-solid fa-user-plus fa-1x"></i></mat-card-title>
         <div class="row">
           <mat-card-content>
             <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
               <div class="form-group">
                 <div class="col-md-6">
                   <mat-form-field>
-                    <mat-label for="firstName">First Name</mat-label>
+                    <mat-label for="firstName">Prenumele</mat-label>
                     <input matInput formControlName="firstName" />
                     <mat-error *ngIf="(!registerForm.get('firstName').valid || registerForm.get('firstName').errors?.whitespace) && !registerForm.get('firstName').errors?.required">
-                      Please enter a valid name!
+                      Vă rugăm introduceți un prenume valid!
                     </mat-error>
                     <mat-error *ngIf="registerForm.get('firstName').errors?.required">
-                      First Name is required!
+                      Prenumele e obligatoriu!
                     </mat-error>
                   </mat-form-field>
                 </div>
@@ -22,13 +22,13 @@
               <div class="form-group">
                 <div class="col-md-6">
                   <mat-form-field>
-                    <mat-label for="lastName">Last Name</mat-label>
+                    <mat-label for="lastName">Nume</mat-label>
                     <input matInput formControlName="lastName" />
                     <mat-error *ngIf="(!registerForm.get('lastName').valid || registerForm.get('lastName').errors?.whitespace) && !registerForm.get('lastName').errors?.required">
-                      Please enter a valid name!
+                      Vă rugăm introduceți un nume valid!
                     </mat-error>
                     <mat-error *ngIf="registerForm.get('lastName').errors?.required">
-                      Last Name is required!
+                      Numele e obligatoriu!
                     </mat-error>
                   </mat-form-field>
                 </div>
@@ -39,10 +39,10 @@
                     <mat-label for="email">Email</mat-label>
                     <input matInput formControlName="email" />
                     <mat-error *ngIf="(!registerForm.get('email').valid || registerForm.get('email').errors?.whitespace) && !registerForm.get('email').errors?.required">
-                      Please enter a valid email!
+                      Vă rugăm introduceți un email valid!
                     </mat-error>
                     <mat-error *ngIf="registerForm.get('email').errors?.required">
-                      Email address is required!
+                      Adresa de email e obligatorie!
                     </mat-error>
                   </mat-form-field>
                 </div>
@@ -50,16 +50,16 @@
               <div class="form-group">
                 <div class="col-md-6">
                   <mat-form-field>
-                    <mat-label for="password">Password</mat-label>
+                    <mat-label for="password">Parola</mat-label>
                     <input matInput [type]="hidePassword ? 'password' : 'text'" formControlName="password" #password >
                     <mat-icon matSuffix (click)="togglePasswordVisibility(password)" >
                       {{hidePassword?'visibility_off':'visibility'}}
                     </mat-icon>
                     <mat-error *ngIf="registerForm.get('password').errors?.pattern">
-                      The password must have at least 10 characters, an uppercase, a lowercase, a digit and a symbol.
+                      Parola trebuie să aibă cel puțin 10 caractere, o literă mare, o literă mică, un număr și un simbol.
                     </mat-error>
                     <mat-error *ngIf="registerForm.get('password').errors?.required">
-                      Password is required!
+                      Parola e obligatorie!
                     </mat-error>
                   </mat-form-field>
                 </div>
@@ -67,21 +67,21 @@
               <div class="form-group">
                 <div class="col-md-6" style="margin-top:10px">
                   <mat-form-field>
-                    <mat-label for="confirmationPassword">Confirm Password</mat-label>
+                    <mat-label for="confirmationPassword">Confirmă parola</mat-label>
                     <input matInput [type]="hideConfirmationPassword ? 'password' : 'text'" formControlName="confirmationPassword" #confirmationPassword [errorStateMatcher]="confirmValidParentMatcher">
                     <mat-icon matSuffix (click)="togglePasswordVisibility(confirmationPassword)">
                       {{hideConfirmationPassword?'visibility_off':'visibility'}}
                     </mat-icon>
                     <mat-error *ngIf="registerForm.hasError('mismatch') && !registerForm.get('confirmationPassword').hasError('required')">
-                      Password doesn't match!
+                      Parolele nu se potrivesc!
                     </mat-error>
                     <mat-error *ngIf="registerForm.get('confirmationPassword').errors?.required">
-                      Confirming password is required!
+                      Parola de confirmare e obligatorie!
                     </mat-error>
                   </mat-form-field>
                 </div>
               </div>
-              <button mat-raised-button color="primary" type="submit" [disabled]="registerForm.invalid">Register</button>
+              <button mat-raised-button color="primary" type="submit" [disabled]="registerForm.invalid">Creează cont</button>
             </form>
           </mat-card-content>
         </div>
