--- a/src/app/features/auth/components/login/login.component.html
+++ b/src/app/features/auth/components/login/login.component.html
@@ -35,6 +35,7 @@
               </div>
               <button mat-raised-button color="primary" type="submit" [disabled]="loginForm.invalid" >Conectare</button>
             </form>
+            <div style="cursor:pointer; color: white; text-align: center; margin-top: 20px" (click)="goToRequestResetPassword()"><u>Ați uitat parola?</u></div>
           </mat-card-content>
         </div>
       </div>
