--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,85 @@
-<app-layout></app-layout>
-  <df-messenger
+<mat-toolbar>
+  <button *ngIf="!checkTokenValidity()" mat-icon-button (click)="toggleMenu()">
+    <mat-icon>menu</mat-icon>
+  </button>
+  <span class="toolbar-title">CerviCare</span>
+  <div *ngIf="checkTokenValidity()" class="menu-position">
+    <button *ngIf="getLoginPage()" mat-raised-button (click)="goToRegisterAccount()">Creează un cont</button>
+    <button *ngIf="!getLoginPage()" mat-raised-button (click)="goToLogin()">Conectare</button>
+  </div>
+  <span style="color:white;" *ngIf="!checkTokenValidity()">
+      <img src="{{profilePhoto}}"
+           alt="UserProfilePhoto"
+           class="rounded-circle"
+           width="30">
+    {{getUserName()}}
+     </span>
+</mat-toolbar>
+
+<mat-sidenav-container autosize>
+  <mat-sidenav [mode]="isMobile ? 'over' : 'side'" [opened]="isMobile ? 'false' : 'true'" *ngIf="!checkTokenValidity()">
+    <mat-nav-list>
+      <a mat-list-item>
+        <span class="entry">
+          <mat-icon>groups</mat-icon>
+           <span (click)="goToSupportGroups()">Grupuri de suport</span>
+        </span>
+      </a>
+      <a mat-list-item>
+        <span class="entry">
+           <mat-icon>feed</mat-icon>
+           <span (click)="goToFeed()">Articole</span>
+        </span>
+      </a>
+      <a mat-list-item *ngIf="!isHealthStaff()">
+        <span class="entry">
+           <mat-icon>emoji_people</mat-icon>
+           <span  (click)="goToCounselingRequest()">Solicită consiliere</span>
+        </span>
+      </a>
+      <a mat-list-item *ngIf="isHealthStaff()">
+        <span class="entry">
+           <mat-icon>emoji_people</mat-icon>
+           <span  (click)="goToCounselingRequestTable()">Cereri de consiliere</span>
+        </span>
+      </a>
+      <a mat-list-item>
+        <span class="entry">
+           <mat-icon>calendar_month</mat-icon>
+           <span (click)="goToCalendar()">Calendar</span>
+        </span>
+      </a>
+      <a mat-list-item>
+        <span class="entry">
+           <mat-icon>account_circle</mat-icon>
+           <span (click)="goToProfile()">Profil</span>
+        </span>
+      </a>
+      <a mat-list-item *ngIf="isAdmin()">
+        <span class="entry">
+           <mat-icon>manage_accounts</mat-icon>
+           <span (click)="goToUserTable()" >Gestionare utilizatori</span>
+        </span>
+      </a>
+      <div class="logout-section">
+        <a mat-list-item>
+        <span class="entry">
+          <mat-icon>logout</mat-icon>
+          <span (click)="logout()">Deconectare</span>
+        </span>
+        </a>
+      </div>
+    </mat-nav-list>
+
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <router-outlet></router-outlet>
+  </mat-sidenav-content>
+</mat-sidenav-container>
+
+  <df-messenger *ngIf = "!checkTokenValidity()"
     intent="WELCOME"
-    chat-title="CCApp-agent"
+    chat-title="CerviCare-agent"
     agent-id="868bb97d-3f2d-4c33-888d-d0555f9486e6"
     language-code="ro">
   </df-messenger>
-<mat-toolbar style="margin-top: 50px">
-  <span style="margin: auto">© 2024 CC Website. All rights reserved.</span>
-</mat-toolbar>
-<router-outlet />
