--- a/src/app/features/auth/components/confirm-email/confirm-email.component.html
+++ b/src/app/features/auth/components/confirm-email/confirm-email.component.html
@@ -1,3 +1,11 @@
-<div style="text-align: center; font-size: 20px; margin-top: 150px; height: 100vh">
-  Adresa de email a fost confirmată cu succes!
+<div style="text-align: center; font-size: 20px; margin-top: 150px;" *ngIf="loading">
+  <mat-spinner></mat-spinner>
+</div>
+
+<div style="text-align: center; font-size: 20px; margin-top: 150px;" *ngIf="!loading && confirmed">
+  Adresa de email a fost confirmată cu succes! Urmează să fiți redirecționat către pagina de conectare.
+</div>
+
+<div style="text-align: center; font-size: 20px; margin-top: 150px;" *ngIf="!loading && !confirmed">
+  Adresa de email nu a putut fi confirmată sau a fost deja confirmată! Urmează să fiți redirecționat către pagina de conectare.
 </div>
