--- a/src/app/features/auth/components/register/register.component.css
+++ b/src/app/features/auth/components/register/register.component.css
@@ -1,28 +1,27 @@
 .main-div{
-  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 mat-card{
-  margin-top: 5%;
+  margin-top: 25px;
   width: 30%;
   justify-content: center;
   align-items: center;
-  margin-bottom: 3%;
+  margin-bottom: 20px;
   min-width: 370px;
 }
 
 mat-form-field{
-  margin-bottom:20px;
+  margin-bottom:10px;
   min-width: 350px;
 }
 
 mat-card-title {
   margin-top: 20px;
-  margin-bottom: 20px;
-  margin-left: 18%;
+  margin-bottom: 15px;
+  text-align: center;
   color: lightgray;
 }
 
