--- a/src/app/features/auth/components/register/register.component.html
+++ b/src/app/features/auth/components/register/register.component.html
@@ -6,7 +6,6 @@
           <mat-card-content>
             <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
               <div class="form-group">
-                <div class="col-md-6">
                   <mat-form-field>
                     <mat-label for="firstName">Prenumele</mat-label>
                     <input matInput formControlName="firstName" />
@@ -17,10 +16,8 @@
                       Prenumele e obligatoriu!
                     </mat-error>
                   </mat-form-field>
-                </div>
               </div>
               <div class="form-group">
-                <div class="col-md-6">
                   <mat-form-field>
                     <mat-label for="lastName">Nume</mat-label>
                     <input matInput formControlName="lastName" />
@@ -31,10 +28,8 @@
                       Numele e obligatoriu!
                     </mat-error>
                   </mat-form-field>
-                </div>
               </div>
               <div class="form-group">
-                <div class="col-md-6">
                   <mat-form-field>
                     <mat-label for="email">Email</mat-label>
                     <input matInput formControlName="email" />
@@ -45,10 +40,8 @@
                       Adresa de email e obligatorie!
                     </mat-error>
                   </mat-form-field>
-                </div>
               </div>
               <div class="form-group">
-                <div class="col-md-6">
                   <mat-form-field>
                     <mat-label for="password">Parola</mat-label>
                     <input matInput [type]="hidePassword ? 'password' : 'text'" formControlName="password" #password >
@@ -62,10 +55,8 @@
                       Parola e obligatorie!
                     </mat-error>
                   </mat-form-field>
-                </div>
               </div>
-              <div class="form-group">
-                <div class="col-md-6" style="margin-top:10px">
+              <div class="form-group" style="margin-top: 10px">
                   <mat-form-field>
                     <mat-label for="confirmationPassword">Confirmă parola</mat-label>
                     <input matInput [type]="hideConfirmationPassword ? 'password' : 'text'" formControlName="confirmationPassword" #confirmationPassword [errorStateMatcher]="confirmValidParentMatcher">
@@ -79,7 +70,6 @@
                       Parola de confirmare e obligatorie!
                     </mat-error>
                   </mat-form-field>
-                </div>
               </div>
               <button mat-raised-button color="primary" type="submit" [disabled]="registerForm.invalid">Creează cont</button>
             </form>
