--- a/src/app/features/auth/components/reset-password/reset-password.component.css
+++ b/src/app/features/auth/components/reset-password/reset-password.component.css
@@ -1,8 +1,8 @@
 .main-div{
-  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 100px;
 }
 
 mat-card{
