--- a/src/app/features/calendar/components/extended-calendar/extended-calendar.component.css
+++ b/src/app/features/calendar/components/extended-calendar/extended-calendar.component.css
@@ -2,12 +2,18 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 86vh;
 }
 
 .calendar-container {
-  margin-top: 100px;
+  margin-top: 30px;
   width: 70%;
   max-width: 700px;
   height: auto;
 }
+
+#create-event-button{
+  position: fixed;
+  bottom: 6em;
+  right: 1.5em;
+}
+
