--- a/src/app/features/calendar/components/extended-calendar/extended-calendar.component.html
+++ b/src/app/features/calendar/components/extended-calendar/extended-calendar.component.html
@@ -1,7 +1,7 @@
 <div class="page-container">
-  <div class="calendar-container">
-    <div *ngIf="calendarOptions">
-      <full-calendar [options]="calendarOptions">
+  <div class="calendar-container" >
+    <div *ngIf="calendarOptions" >
+      <full-calendar [options]="calendarOptions" #calendar>
         <ng-template #eventContent let-arg>
           <b>{{arg.timeText}}</b>
           <b><i>{{arg.event.title}}</i></b><br>
@@ -10,3 +10,5 @@
     </div>
   </div>
 </div>
+<button (click)="onCreateEventClick()" mat-fab id="create-event-button"><mat-icon>add</mat-icon></button>
+
