--- a/src/app/features/feed & articles/components/article/article.component.html
+++ b/src/app/features/feed & articles/components/article/article.component.html
@@ -5,10 +5,24 @@
       <div style="font-size: 68px; line-height: 70px; text-align: center">{{article.title}}</div>
       <img src="{{article.titlePhotoContent}}" style="max-height: 580px; max-width: 720px; margin-top: 10px; text-align: center">
     </mat-card-title>
-    <mat-card-subtitle style="margin-top: 5px; margin-bottom: 40px; text-align: center"><span style="margin-right: 120px;">Autor: {{ article.authorName }}</span>Data: {{article.publicationDate!=undefined?article.publicationDate:getDate()}}</mat-card-subtitle>
+    <mat-card-subtitle style="margin-top: 5px; margin-bottom: 40px; text-align: center">
+      <span style="margin-right: 120px;">Autor: {{ article.authorName }}</span>
+      Data: {{article.publicationDate!=undefined?article.publicationDate:getDate()}}
+    </mat-card-subtitle>
   </mat-card-header>
   <mat-card-content style="margin-left: 25px; margin-right: 25px">
     <div [innerHTML]="article.content"></div>
   </mat-card-content>
+  <mat-card-actions style="align-self: flex-start">
+    <mat-icon class="action-item" color="primary" (click)="toggleFavorite()">
+      {{ article.isFavorite ? 'favorite' : 'favorite_border' }}
+    </mat-icon>
+    <mat-icon class="action-item"
+              style="cursor: pointer; color: dimgrey"
+              *ngIf="article.isOwner"
+              (click)="onDeleteArticle(article)">
+      delete
+    </mat-icon>
+  </mat-card-actions>
 </mat-card>
 </div>
