--- a/src/app/features/support groups/components/support-group/support-group.component.css
+++ b/src/app/features/support groups/components/support-group/support-group.component.css
@@ -1,7 +1,7 @@
 #create-post-button{
   position: fixed;
-  bottom: 2em;
-  right: 2em;
+  bottom: 6em;
+  right: 1.5em;
 }
 
 #postsFeed{
@@ -9,6 +9,33 @@
   min-height: 700px;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 100px;
+  margin-top: 50px;
+}
+
+.noPosts{
+  margin-left: 50px;
+  margin-right: auto;
+  margin-top: 50px;
+}
+
+mat-card{
+  max-width: 1200px;
+  min-height: 100px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+}
+
+mat-card-title{
+  font-size: 30px;
+  margin-top:20px;
+  margin-left: 20px;
+}
+
+.entry{
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  margin-top: 5px;
 }
 
