--- a/src/app/features/user profile/components/user-profile-support-group/user-profile-support-group.component.html
+++ b/src/app/features/user profile/components/user-profile-support-group/user-profile-support-group.component.html
@@ -2,7 +2,7 @@
   <mat-card-header>
     <mat-card-title
       style="cursor: pointer"
-      (click)="goToGroup.emit(supportGroup.groupName)">
+      (click)="goToGroup.emit(supportGroup)">
       {{supportGroup.groupName}}
     </mat-card-title>
   </mat-card-header>
